<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeFragment">


    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView_home_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="12dp"
        android:focusable="false"
        app:queryHint="@string/fragment_home_search"
        app:searchHintIcon="@null"
        app:iconifiedByDefault="false"
        app:closeIcon="@drawable/baseline_clear_24"
        app:searchIcon="@drawable/baseline_search_24"
        android:background="@drawable/border"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/TabLayout_home_item"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_home_tabItem_shoe_title" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_home_tabItem_tShirt_title" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_home_tabItem_pants_title" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_home_tabItem_jacket_title" />
    </com.google.android.material.tabs.TabLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView2"
        android:name="com.example.term_project_wecollab.HomeItemFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        tools:visibility="gone" />

</LinearLayout>