<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CartFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textView_cart_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/cart_title"
        android:textSize="34sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_cart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp">

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/button_cart_purchase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#020202"
        android:text="@string/fragment_cart_button_purchaseOrder"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/button_cart_clearCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#020202"
        android:text="@string/fragment_cart_button_clearCart"
        android:textColor="#FFFFFF" />

</FrameLayout>