<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout_purchaseHistory_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="5dp"
    android:background="?android:selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".PurchaseHistoryItemFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:id="@+id/textView_purchaseItem_orderNumberTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/purchases_orderNumber_title"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView_purchaseItem_orderNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/app_placeholder"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:id="@+id/textView_purchaseItem_purchaseDateTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:paddingHorizontal="15dp"
            android:text="@string/purchases_purchaseDateTitle"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView_purchaseItem_purchaseDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/app_placeholder"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:id="@+id/textView_purchaseItem_totalItemsTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:gravity="center"
            android:text="@string/purchases_totalItemsTitle"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView_purchaseItem_totalPriceTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:gravity="center"
            android:text="@string/purchases_totalPriceTitle"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:id="@+id/textView_purchaseItem_totaltems"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:gravity="center"
            android:text="@string/app_placeholder"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView_purchaseItem_totalPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:gravity="center"
            android:text="@string/app_placeholder"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>