<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:weightSum="100"
    tools:context=".ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30"
        android:orientation="vertical"
        android:paddingHorizontal="20dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="60"
            android:contentDescription="@string/placeholder"
            android:src="@drawable/baseline_person_24" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="40"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:id="@+id/textView_profile_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:gravity="center"
                android:text="@string/placeholder"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button_profile_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center_vertical"
                android:text="@string/editProfile_edit_title"
                app:icon="@drawable/baseline_edit_24"
                app:iconGravity="textEnd" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="center"
        android:text="@string/app_purchases_title"
        android:textSize="34sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_purchases"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="60" />

</LinearLayout>