<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".PurchaseHistoryItemDetailFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:id="@+id/textView_purchaseDetail_orderNumberTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/purchases_orderNumber_title"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView_purchaseDetail_orderNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="@string/app_placeholder"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:id="@+id/textView_purchaseDetail_purchaseDateTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/purchases_purchaseDateTitle"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/textView_purchaseDetail_purchaseDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="@string/app_placeholder"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_purchaseHistoryItemDetail_items"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="70">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/textView_purchaseDetail_total"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="15"
        android:gravity="start|center_vertical"
        android:paddingHorizontal="15dp"
        android:text="@string/app_placeholder"
        android:textSize="20sp" />

</LinearLayout>